--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body{
 	font-size:0.825em;
 	color:#fcfcfc;
 	background-color:#330033;     
-	background-image:url(../images/bb.jpg);
+	background-image:url(bb.jpg);
 	margin-right:10px;
 	background-attachment: fixed;
 	margin-right: 200px;
